# dataactivator

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
src/dataactivator/: cli.py
src/dataactivator/core/: config.py  events.py  locks.py  reporting.py  scheduler.py  sessions.py  web.py
src/dataactivator/providers/vw/: __init__.py  client.py  const.py  datasets.py  pages.py  poll.py
tests/: test_config.py  test_events.py  test_freshness.py  test_locks.py  test_poll.py  test_reporting.py  test_scheduler.py  test_sessions.py  test_vw_client.py  test_vw_pages.py  test_web.py
